--- a/redis-secret-tls.yaml
+++ b/redis-secret-tls.yaml
@@ -1,1 +1,5 @@
 kubectl create secret tls redis-crt --cert=redis.crt --key=redis.key  -n redis
+kubectl create secret generic redis-ca --from-file=ca.crt  -n redis
+
+
+
