--- a/redis-secret-tls.yaml
+++ b/redis-secret-tls.yaml
@@ -2,4 +2,4 @@ kubectl create ns redis;
 kubectl create secret tls redis-crt --cert=redis.crt --key=redis.key  -n redis;
 kubectl create secret generic redis-ca --from-file=ca.crt  -n redis;
 kubectl apply -f redis-cm.yaml -n redis;
-kubectl apply -f deploy-redis-k8s -n redis;
+kubectl apply -f deploy-redis-k8s.yaml -n redis;
